Tidy HTML & CSS, fix alignment and comment out JS

--- a/calc.css
+++ b/calc.css
@@ -7,22 +7,23 @@ body {
 }
 
 .container-fluid {
-    padding: 0 !important;
-    margin: 0 !important;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
-#calcbox {
+#calcbox { 
     height: 400px;
     width: 300px;
     -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.62);
     -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.62);
     box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.62);
     background-color: #F8B8B8;
+    
 }
 
 #displayer {
     height: 25%;
-    background-color: /*#F1DBDB*/ #fee;
+    background-color: #fee;
 }
 
 #buttons {
@@ -31,14 +32,14 @@ body {
 }
 
 button {
-    padding: 0 !important;
-    margin: 0 !important;
-    height: 15%;
+    padding: 0px !important;
+    margin: 0px !important;
     width: 25%;
+    height: 100%;
     display: block;
     float: left;
     background-color: #F8B8B8;
-    border: 1px solid /*#F1DBDB*/ #fee;
+    border: 1px solid #fee;
     border-bottom: none;
     border-left: none;
 }
@@ -47,10 +48,11 @@ button:active {
     background-color: #f2b2b1;
 }
 
-#buttonrow {
+.buttonrow {
     width: 100%;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
+    height: calc(400px / 6.5);
 }
 
 .midpink {
@@ -84,7 +86,7 @@ button:active {
     margin-right: 10px;
     padding-top: 25px;
     font-size: 4em;
-    right: 0;
+    right: 0px;
     max-width: 93%;
 }
 
@@ -94,18 +96,18 @@ button:active {
 }
 
 .twice {
-    width:50%;
+    width: 50%;
 }
 
 .absolute-center {
   margin: auto;
   position: absolute;
-  top: 0; left: 0; bottom: 0; right: 0;
+  top: 0px; left: 0px; bottom: 0px; right: 0px;
 }
 
 #colorme {
     display: none;
-    margin-top: 10;
+    margin-top: 10px;
     height: 60px;
     margin-left: 22%;
     margin-right: 20%;
